--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nextjs-notion-starter-kit",
+  "name": "hayk-martiros-website",
   "version": "2.0.0",
   "private": true,
-  "description": "The perfect starter kit for building beautiful websites with Next.js and Notion.",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
-  "repository": "transitive-bullshit/nextjs-notion-starter-kit",
+  "description": "Personal webiste for Hayk Martiros",
+  "author": "Hayk Martiros <hayk.mart@gmail.com>",
+  "repository": "hmartiro/website-notion",
   "license": "MIT",
   "engines": {
     "node": ">=16"
