--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,31 @@
 {
-  "name": "Next.js Notion Starter Kit",
-  "short_name": "Starter Kit",
+  "name": "Hayk Martiros Personal Website",
+  "short_name": "Hayk Martiros",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "/favicon.ico",
+      "type": "image/ico",
+      "sizes": "38x38"
+    },
+    {
+      "src": "/favicon-16x16.png",
+      "type": "image/png",
+      "sizes": "16x16"
+    },
+    {
+      "src": "/favicon-32x32.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "/favicon-128x128.png",
-      "type": "image/png",
-      "sizes": "128x128"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "/favicon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "theme_color": "#000000",
